force-app/main/default/objects/Borrowing_History__c/Borrowing_History__c.object-meta.xml
<CustomObject>
    <label>Borrowing History</label>
    <nameField>
        <displayFormat>BH-{00000}</displayFormat>
        <label>Borrowing History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowing Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>