force-app/main/default/objects/Borrowing_History__c/fields/Fine__c.field-meta.xml
<CustomField>
    <fullName>Fine__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fine(If Any)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>