force-app/main/default/objects/Borrowing_History__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Borrowing Histories</relationshipLabel>
    <relationshipName>Borrowing_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>