force-app/main/default/objects/Borrowing_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( ISNULL(Return_Date__c ), &#39;Borrowed&#39;, &#39;Returned&#39;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>