force-app/main/default/objects/Borrowing_History__c/validationRules/Cannot_Borrow_borrowed_item.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Borrow_borrowed_item</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Item__r.Status__c, &#39;Borrowed&#39;)&amp;&amp;  ISNULL(Return_Date__c )</errorConditionFormula>
    <errorMessage>You cannot borrow this item as this is unavailable at the moment</errorMessage>
</ValidationRule>